# antinode-norma

./: .copilot-instructions.md  .dockerignore  .env.docker.example  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  TROUBLESHOOTING.md  WEAREAT.md  codegen.yaml  docker-compose.yml  openrouter_test.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements-agent.txt  requirements-dev.txt  setup.py  setup_mcp_codegen.sh  test_cli.py  test_env.py
.github/: dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  roadmap_initiative.md
.github/workflows/: ci.yml  phase7-integrations.yml  playwright.yml  sonarcloud.yml
antinode_norma/: __init__.py  agent.py  agent_tools.py  cli.py  runner.py
claude-plugin/: .env.example  .gitignore  README.md  RELEASE.md  index.js  manifest.json  pack.sh  package.json
docs/: ADVANCED_INTEGRATIONS.md  AGENT.md  AUTOFIX.md  CLAUDE_PLUGIN.md  CLIENT_USAGE.md  COMMANDS.md  COMPETITOR_MATRIX.md  DOCKER.md  E2E_WORKFLOW.md  LOOP_FLEET_ENGINEERING_BRIEF.md  MARKETING_COMPETITIVE_AND_TRENDS_GUIDE.md  MIGRATION_GUIDE.md  NORMA_SUMMARY.md  PHASED_IMPROVEMENT_PLAN.md  PLAYBOOK_ALIGNMENT.md  PRODUCT_POSITIONING_BRIEF.md  QUICK_COMMANDS.md  TESTING.md  TUTORIAL.md  VISUAL_TESTING.md
examples/: phase7_integration_demo.py  story.md
features/: local_seed.feature  login.feature  reset_my_password.feature  reset_my_password_via_email.feature
tests/: __init__.py  conftest.py
(+89 files in other folders)
