[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antinode_norma"
version = "0.1.0"
description = "BDD feature file generator with INVEST quality gate"
authors = [{name = "Antinode Labs", email = "info@antinodelabs.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.23.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=0.1.0",
    "jira>=3.4.0",
    "requests>=2.31.0",
    "mcp @ git+https://github.com/modelcontextprotocol/python-sdk.git@main",
    "click>=8.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[project.scripts]
anorm = "antinode_norma.cli:main"